--- a/composer.json
+++ b/composer.json
@@ -1,18 +1,9 @@
 {
     "name": "zymsys/zymurgy-cm",
+    "description": "Zymurgy:CM Content Management",
+    "license":"MIT",
     "version": "1.1.0",
     "minimum-stability": "dev",
-    "dist": {
-        "url": "http://github.com/zymsys/zymurgy-cm",
-        "type": "vcs"
-    },
-    "repositories": [
-	{
-            "name": "minmb/phpmailer",
-            "type": "vcs",
-            "url": "https://github.com/minmb/phpmailer.git"
-        }
-    ],
     "require": {
         "minmb/phpmailer": "dev-master"
     }
